--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Personal Portfolio Website</title>
         <!----CSS link----->
         <link rel="stylesheet" href="style2.css" />
+        <meta name="google-site-verification" content="7KQ_jX70xSKKmuxu2FLxxVkdGwy-VcrnAoPnzBV2IFg" />
     </head>
     <body>
         <h1>My Portfolio</h1>
